tests/src/snapshots/pluma_tests__parse_success__let_pattern_underscore.snap
---
source: tests/src/parse_success.rs
expression: let _ = 47
---

=== Source ===
let _ = 47

=== Tokens ===
[
    KeywordLet(
        0,
        3,
    ),
    Underscore(
        4,
        5,
    ),
    Equals(
        6,
        7,
    ),
    DecimalDigits(
        8,
        10,
    ),
]

=== Comments ===
{}

=== AST ===
ModuleNode {
    pos: (
        0,
        10,
    ),
    body: [
        TopLevelStatementNode {
            pos: (
                0,
                10,
            ),
            kind: Let(
                LetNode {
                    pos: (
                        0,
                        10,
                    ),
                    pattern: PatternNode {
                        pos: (
                            4,
                            5,
                        ),
                        kind: Underscore,
                    },
                    value: ExprNode {
                        pos: (
                            8,
                            10,
                        ),
                        kind: Literal(
                            LiteralNode {
                                pos: (
                                    8,
                                    10,
                                ),
                                kind: IntDecimal(
                                    47,
                                ),
                            },
                        ),
                        typ: Unknown,
                    },
                },
            ),
        },
    ],
}

