tests/src/snapshots/pluma_tests__parse_success__list_empty.snap
---
source: tests/src/parse_success.rs
expression: "[]"
---

=== Source ===
[]

=== Tokens ===
[
    LeftBracket(
        0,
        1,
    ),
    RightBracket(
        1,
        2,
    ),
]

=== Comments ===
{}

=== AST ===
ModuleNode {
    pos: (
        0,
        2,
    ),
    body: [
        TopLevelStatementNode {
            pos: (
                0,
                2,
            ),
            kind: Expr(
                ExprNode {
                    pos: (
                        0,
                        2,
                    ),
                    kind: List(
                        [],
                    ),
                    typ: Unknown,
                },
            ),
        },
    ],
}

