tests/src/snapshots/pluma_tests__parse_success__list_of_expressions.snap
---
source: tests/src/parse_success.rs
expression: "[1, callThing(), repeat 3 times \"wow\"]"
---

=== Source ===
[1, callThing(), repeat 3 times "wow"]

=== Tokens ===
[
    LeftBracket(
        0,
        1,
    ),
    DecimalDigits(
        1,
        2,
    ),
    Comma(
        2,
        3,
    ),
    Identifier(
        4,
        13,
    ),
    LeftParen(
        13,
        14,
    ),
    RightParen(
        14,
        15,
    ),
    Comma(
        15,
        16,
    ),
    Identifier(
        17,
        23,
    ),
    DecimalDigits(
        24,
        25,
    ),
    Identifier(
        26,
        31,
    ),
    StringLiteral(
        33,
        36,
    ),
    RightBracket(
        37,
        38,
    ),
]

=== Comments ===
{}

=== AST ===
ModuleNode {
    pos: (
        0,
        38,
    ),
    body: [
        TopLevelStatementNode {
            pos: (
                0,
                38,
            ),
            kind: Expr(
                ExprNode {
                    pos: (
                        0,
                        38,
                    ),
                    kind: List(
                        [
                            ExprNode {
                                pos: (
                                    1,
                                    2,
                                ),
                                kind: Literal(
                                    LiteralNode {
                                        pos: (
                                            1,
                                            2,
                                        ),
                                        kind: IntDecimal(
                                            1,
                                        ),
                                    },
                                ),
                                typ: Unknown,
                            },
                            ExprNode {
                                pos: (
                                    4,
                                    15,
                                ),
                                kind: Call(
                                    CallNode {
                                        pos: (
                                            4,
                                            15,
                                        ),
                                        callee: ExprNode {
                                            pos: (
                                                4,
                                                13,
                                            ),
                                            kind: Identifier(
                                                IdentifierNode {
                                                    pos: (
                                                        4,
                                                        13,
                                                    ),
                                                    name: "callThing",
                                                },
                                            ),
                                            typ: Unknown,
                                        },
                                        args: [
                                            ExprNode {
                                                pos: (
                                                    13,
                                                    15,
                                                ),
                                                kind: EmptyTuple,
                                                typ: Unknown,
                                            },
                                        ],
                                        typ: Unknown,
                                    },
                                ),
                                typ: Unknown,
                            },
                            ExprNode {
                                pos: (
                                    17,
                                    36,
                                ),
                                kind: Call(
                                    CallNode {
                                        pos: (
                                            17,
                                            36,
                                        ),
                                        callee: ExprNode {
                                            pos: (
                                                17,
                                                31,
                                            ),
                                            kind: MultiPartIdentifier(
                                                [
                                                    IdentifierNode {
                                                        pos: (
                                                            17,
                                                            23,
                                                        ),
                                                        name: "repeat",
                                                    },
                                                    IdentifierNode {
                                                        pos: (
                                                            26,
                                                            31,
                                                        ),
                                                        name: "times",
                                                    },
                                                ],
                                            ),
                                            typ: Unknown,
                                        },
                                        args: [
                                            ExprNode {
                                                pos: (
                                                    24,
                                                    25,
                                                ),
                                                kind: Literal(
                                                    LiteralNode {
                                                        pos: (
                                                            24,
                                                            25,
                                                        ),
                                                        kind: IntDecimal(
                                                            3,
                                                        ),
                                                    },
                                                ),
                                                typ: Unknown,
                                            },
                                            ExprNode {
                                                pos: (
                                                    33,
                                                    36,
                                                ),
                                                kind: Literal(
                                                    LiteralNode {
                                                        pos: (
                                                            33,
                                                            36,
                                                        ),
                                                        kind: Str(
                                                            "wow",
                                                        ),
                                                    },
                                                ),
                                                typ: Unknown,
                                            },
                                        ],
                                        typ: Unknown,
                                    },
                                ),
                                typ: Unknown,
                            },
                        ],
                    ),
                    typ: Unknown,
                },
            ),
        },
    ],
}

